* refer: The "-p" option now works with files that are not in the
  current directory (bug reported by Michael Piotrowski).
* lookbib: This version does not support the "-n" option, which was
  described in the BSD-derived manual page (thanks to Michael Piotrowski).
* [nt]roff: Do not go into an infinite loop if a tab character appears in
  the arguments to ".warn" (bug reported by Russ Cox).

Release 080407
* [nt]roff: A type definition problem that caused an endless loop on
  64-bit systems has been fixed.
* [nt]roff: The ".warn" request now accepts full numeric expressions
  instead of plain numbers only.
* -mg macros: When reading the output of "ls" to emulate ".mso", use
  nofill mode to avoid artifacts from paragraph adjustment that cause
  the request to fail.
* eqn: Before an equation or binary operator, print a "\|" instead of
  a "\^" if the preceding character is italic. The previous behavior
  resulted from a too far-reaching change in release 051107. (Bug
  reported by Joerg van den Hoff.)
* eqn: Do not displace "hat" and "tilde" horizontally (bug reported by
  Joerg van den Hoff).
* eqn: Fixed the types of yylex() and yypv.

Release 070908
* troff: The ".hw" request now works correctly for words that contain
  ligatures (bug reported by Dirk-Wilhelm Peters).
* troff: Hyphenate correctly when a hyphenation point occurs inside a
  ligature that follows a non-ASCII character. Previously, the word was
  actually hyphenated too early in this situation (bug reported by
  Dirk-Wilhelm Peters).
* troff: Clear the font width cache before mounting a Type 1, TrueType,
  or OpenType font. The previous failure to do so could lead to improper
  alignment of lines when a font was mounted on the same font position
  that was previously used (bug reported by Dirk-Wilhelm Peters).
* [nt]roff: When converting floating point values in exponential notation
  (1.234e5 etc.) to integers, apply the exponent before computing the final